--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -1,102 +1,139 @@
 {
+  "text.autoconfig.worldtools.category.Advanced": "Erweitert",
+  "text.autoconfig.worldtools.category.Debug": "Debug",
+  "text.autoconfig.worldtools.category.Entity": "Entität",
+  "text.autoconfig.worldtools.category.General": "Allgemein",
+  "text.autoconfig.worldtools.category.Render": "Render",
+  "text.autoconfig.worldtools.category.World": "Welt",
   "text.autoconfig.worldtools.option.advanced": "Erweitert",
-  "text.autoconfig.worldtools.option.advanced.accentColor": "Aktzentfarbe (RGB Hex)",
-  "text.autoconfig.worldtools.option.advanced.anonymousMode": "Anonyme Koordinaten",
-  "text.autoconfig.worldtools.option.advanced.hideExperimentalWorldGui": "Benutzeroberfläche der Experimentalwelt ausblenden",
-  "text.autoconfig.worldtools.option.advanced.captureBarColor": "Aufzeichnungsbalkenfarbe (RGB Hex)",
-  "text.autoconfig.worldtools.option.advanced.captureBarStyle": "Aufzeichnungsbalkenstil",
-  "text.autoconfig.worldtools.option.advanced.progressBarColor": "Vortschrittsbalkenfarbe (RGB Hex)",
-  "text.autoconfig.worldtools.option.advanced.progressBarStyle": "Vortschrittsbalkenstil",
-  "text.autoconfig.worldtools.option.advanced.progressBarTimeout": "Vortschrittsbalken Anzeigedauer (ms)",
-  "text.autoconfig.worldtools.option.advanced.showChatMessages": "Info Chat Nachrichten anzeigen",
-  "text.autoconfig.worldtools.option.advanced.showToasts": "Info Toasts anzeigen",
-  "text.autoconfig.worldtools.option.capture": "Aufnahme",
-  "text.autoconfig.worldtools.option.capture.advancements": "Erfolge",
-  "text.autoconfig.worldtools.option.capture.autoDownload": "Download automatisch starten",
-  "text.autoconfig.worldtools.option.capture.chunks": "Chunks",
-  "text.autoconfig.worldtools.option.capture.compressLevel": "Welt als ZIP speichern",
-  "text.autoconfig.worldtools.option.capture.containerColor": "Kontainerfarbe (RGB Hex)",
-  "text.autoconfig.worldtools.option.capture.entities": "Entitäten",
-  "text.autoconfig.worldtools.option.capture.levelData": "Level.dat",
-  "text.autoconfig.worldtools.option.capture.metadata": "Metadaten",
-  "text.autoconfig.worldtools.option.capture.players": "Spieler",
-  "text.autoconfig.worldtools.option.capture.maps": "Karten",
-  "text.autoconfig.worldtools.option.capture.renderNotYetCachedContainers": "Rendere bisher nicht analysierte Kontainer",
-  "text.autoconfig.worldtools.option.capture.statistics": "Statistiken",
-  "text.autoconfig.worldtools.option.entity": "Entität",
-  "text.autoconfig.worldtools.option.entity.invulnerable": "Unverwundbar",
-  "text.autoconfig.worldtools.option.entity.modifyEntityNbt": "NBT Modifizieren",
-  "text.autoconfig.worldtools.option.entity.noAI": "Keine AI",
-  "text.autoconfig.worldtools.option.entity.noGravity": "Keine Gravitation",
-  "text.autoconfig.worldtools.option.entity.silent": "Stummen",
-  "text.autoconfig.worldtools.option.world": "Welt",
-  "text.autoconfig.worldtools.option.world.doDaylightCycle": "Tageszyklus",
-  "text.autoconfig.worldtools.option.world.doFireTick": "Feuer Ausbreitung",
-  "text.autoconfig.worldtools.option.world.doMobGriefing": "Mob Griefing",
-  "text.autoconfig.worldtools.option.world.doMobSpawning": "Mob Spawning",
-  "text.autoconfig.worldtools.option.world.doPatrolSpawning": "Patrouillen Spawning",
-  "text.autoconfig.worldtools.option.world.doTraderSpawning": "Händler Spawning",
-  "text.autoconfig.worldtools.option.world.doVinesSpread": "Lianen Ausbreitung",
-  "text.autoconfig.worldtools.option.world.doWardenSpawning": "Wächter Spawning",
-  "text.autoconfig.worldtools.option.world.doWeatherCycle": "Wetterzyklus",
-  "text.autoconfig.worldtools.option.world.keepInventory": "Inventar behalten",
-  "text.autoconfig.worldtools.option.world.modifyGameRules": "Spielregeln modifizieren",
-  "text.autoconfig.worldtools.option.debug": "Debuggen",
-  "text.autoconfig.worldtools.option.debug.logSettings": "Protokolleinstellungen",
-  "text.autoconfig.worldtools.option.debug.logSavedChunks": "Gespeicherte Blöcke protokollieren",
+  "text.autoconfig.worldtools.option.advanced.anonymousMode": "Koordinaten im Interface Anonymisieren",
+  "text.autoconfig.worldtools.option.advanced.anonymousMode.@Tooltip": "Wenn diese Option aktiviert ist, werden die Koordinaten in der Benutzeroberfläche anonymisiert. ACHTUNG: Dies hat keinen Einfluss auf die tatsächlichen Daten!",
+  "text.autoconfig.worldtools.option.advanced.hideExperimentalWorldGui": "Warnung von experimentellen Einstellungen deaktivieren.",
+  "text.autoconfig.worldtools.option.advanced.hideExperimentalWorldGui.@Tooltip": "Wenn aktiviert, zeigt die Warnung über das laden von experimentellen Einstellungen nicht mehr an beim laden einer Welt.",
+  "text.autoconfig.worldtools.option.advanced.keepEnderChestContents": "Enderkisten zwischen Downloads in einer Sitzung beibehalten",
+  "text.autoconfig.worldtools.option.advanced.showChatMessages": "Info Chat Nachrichten",
+  "text.autoconfig.worldtools.option.advanced.showToasts": "Toastbenachrichtigungen anzeigen.",
+  "text.autoconfig.worldtools.option.debug": "Debug",
+  "text.autoconfig.worldtools.option.debug.@PrefixText": "Wenn Sie die Debug-Optionen aktivieren, können Probleme in der Log Datei unter .minecraft/logs/latest.log diagnostiziert werden.",
+  "text.autoconfig.worldtools.option.debug.logSavedChunks": "Gespeicherte Chunks protokollieren",
+  "text.autoconfig.worldtools.option.debug.logSavedContainers": "Gespeicherte Behältnisse protokollieren",
   "text.autoconfig.worldtools.option.debug.logSavedEntities": "Gespeicherte Entitäten protokollieren",
-  "text.autoconfig.worldtools.option.debug.logSavedContainers": "Gespeicherte Container protokollieren",
-  "text.autoconfig.worldtools.option.debug.logSavedMaps": "Gespeicherte Karten protokollieren",
-  "text.autoconfig.worldtools.title": "WorldTools Konfiguration",
+  "text.autoconfig.worldtools.option.debug.logSavedMaps": "Gespeicherte Maps protokollieren",
+  "text.autoconfig.worldtools.option.debug.logSettings": "Einestellungen protokollieren",
+  "text.autoconfig.worldtools.option.debug.logZippingProgress": "Fortschritt der Verpackung des Downloads in ZIP Datei protokollieren",
+  "text.autoconfig.worldtools.option.entity": "Entität",
+  "text.autoconfig.worldtools.option.entity.behavior": "Verhalten",
+  "text.autoconfig.worldtools.option.entity.behavior.invulnerable": "Unverwundbarkeit",
+  "text.autoconfig.worldtools.option.entity.behavior.modifyEntityBehavior": "Entitäten verhalten verändern",
+  "text.autoconfig.worldtools.option.entity.behavior.modifyEntityBehavior.@Tooltip": "Wenn diese Option aktiviert ist, werden die aktivierten Tags zu den NBT hinzugefügt. Andernfalls bleibt das Verhalten der Entitäten unberührt.",
+  "text.autoconfig.worldtools.option.entity.behavior.noAI": "Keine KI",
+  "text.autoconfig.worldtools.option.entity.behavior.noGravity": "Keine Gravitation",
+  "text.autoconfig.worldtools.option.entity.behavior.silent": "Stumm",
+  "text.autoconfig.worldtools.option.entity.censor": "Zensur",
+  "text.autoconfig.worldtools.option.entity.censor.censorNames": "Namen zensieren",
+  "text.autoconfig.worldtools.option.entity.censor.lastDeathLocation": "Letzten Todesstandort zensieren",
+  "text.autoconfig.worldtools.option.entity.censor.lastDeathLocation.@Tooltip": "Wenn diese Option aktiviert ist, wird der letzte Todesstandort des Spielers nicht auf der Festplatte gespeichert. Verhindert das ungewollte veröffentlichen von Koordinaten.",
+  "text.autoconfig.worldtools.option.entity.censor.names": "Entitäts Namen zensieren",
+  "text.autoconfig.worldtools.option.entity.censor.owner": "Entitäts Besitzer zensieren",
+  "text.autoconfig.worldtools.option.entity.metadata": "Metadaten",
+  "text.autoconfig.worldtools.option.entity.metadata.captureTimestamp": "Zeitstempel aufnehmen",
+  "text.autoconfig.worldtools.option.entity.metadata.waterMark": "Wasserzeichen",
+  "text.autoconfig.worldtools.option.general.autoDownload": "Automatischer Download",
+  "text.autoconfig.worldtools.option.general.autoDownload.@Tooltip": "Automatischer Start des Downlaods beim betreten einer Mehrspieler Welt.",
+  "text.autoconfig.worldtools.option.general.capture": "Was wird aufgenommen",
+  "text.autoconfig.worldtools.option.general.capture.@Tooltip": "Wenn diese Funktion deaktiviert ist, werden die entsprechenden Daten nicht auf der Festplatte gespeichert. Dies kann zu unvollständigen Aufnahmen führen!",
+  "text.autoconfig.worldtools.option.general.capture.advancements": "Forschritte",
+  "text.autoconfig.worldtools.option.general.capture.chunks": "Chunks",
+  "text.autoconfig.worldtools.option.general.capture.entities": "Entitäten",
+  "text.autoconfig.worldtools.option.general.capture.levelData": "Level.dat",
+  "text.autoconfig.worldtools.option.general.capture.maps": "Karten",
+  "text.autoconfig.worldtools.option.general.capture.metadata": "Metadaten",
+  "text.autoconfig.worldtools.option.general.capture.players": "Spieler",
+  "text.autoconfig.worldtools.option.general.capture.statistics": "Statistiken",
+  "text.autoconfig.worldtools.option.general.compressLevel": "Aufnahme in ZIP Datei Speichern",
+  "text.autoconfig.worldtools.option.general.compressLevel.@Tooltip": "Wenn aktiviert, wird die Aufnahme in einem ZIP Archiv gespeichert.",
+  "text.autoconfig.worldtools.option.render": "Render",
+  "text.autoconfig.worldtools.option.render.accentColor": "Akzent Farbe (RGB Hex)",
+  "text.autoconfig.worldtools.option.render.captureBarColor": "Farbe des Aufnahme-Infobalkens",
+  "text.autoconfig.worldtools.option.render.captureBarStyle": "Stil des Aufnahme-Infobalkens",
+  "text.autoconfig.worldtools.option.render.containerColor": "Farbe fehlender Behältnisse (RGB Hex)",
+  "text.autoconfig.worldtools.option.render.progressBarColor": "Farbe des Fortschrittsbalkens (RGB Hex)",
+  "text.autoconfig.worldtools.option.render.progressBarStyle": "Stil des Fortschirttbalkens",
+  "text.autoconfig.worldtools.option.render.progressBarTimeout": "Ausblenden des Fotschrittbalkens nach (ms)",
+  "text.autoconfig.worldtools.option.render.renderNotYetCachedContainers": "Rendern von noch nicht aufgenommenen Behältnissen",
+  "text.autoconfig.worldtools.option.world.censor": "Zensur",
+  "text.autoconfig.worldtools.option.world.gameRules": "Spielregeln",
+  "text.autoconfig.worldtools.option.world.gameRules.doDaylightCycle": "Voranschreiten der Tageszeit",
+  "text.autoconfig.worldtools.option.world.gameRules.doFireTick": "Feuerausbreitung",
+  "text.autoconfig.worldtools.option.world.gameRules.doMobGriefing": "Zerstörung durch Kreaturen",
+  "text.autoconfig.worldtools.option.world.gameRules.doMobSpawning": "Kreaturen erzeugen",
+  "text.autoconfig.worldtools.option.world.gameRules.doPatrolSpawning": "Plünderer-Patrouillen erzeugen",
+  "text.autoconfig.worldtools.option.world.gameRules.doTraderSpawning": "Fahrende Händler erzeugen",
+  "text.autoconfig.worldtools.option.world.gameRules.doVinesSpread": "Rankenausbreitung",
+  "text.autoconfig.worldtools.option.world.gameRules.doWardenSpawning": "Wärter erzeugen",
+  "text.autoconfig.worldtools.option.world.gameRules.doWeatherCycle": "Wetterwechsel",
+  "text.autoconfig.worldtools.option.world.gameRules.keepInventory": "Inventar nach dem Tod behalten",
+  "text.autoconfig.worldtools.option.world.gameRules.modifyGameRules": "Spielregeln verändern",
+  "text.autoconfig.worldtools.option.world.gameRules.modifyGameRules.@Tooltip": "Wenn diese Option aktiviert ist, werden die Spielregeln an die in dieser Konfiguration festgelegten Werte angepasst. Andernfalls bleiben die Spielregeln unberührt.",
+  "text.autoconfig.worldtools.option.world.metadata": "Metadaten",
+  "text.autoconfig.worldtools.option.world.metadata.captureTimestamp": "Zeitstempel der Aufnahme speichern",
+  "text.autoconfig.worldtools.option.world.metadata.waterMark": "Wasserzeichen zu Chunks hinzufügen",
+  "text.autoconfig.worldtools.option.world.worldGenerator": "Welt Generator",
+  "text.autoconfig.worldtools.option.world.worldGenerator.bonusChest": "Bonus Kiste",
+  "text.autoconfig.worldtools.option.world.worldGenerator.generateFeatures": "Strukturen generieren",
+  "text.autoconfig.worldtools.option.world.worldGenerator.seed": "Startwert",
+  "text.autoconfig.worldtools.option.world.worldGenerator.type": "Welttyp",
+  "text.autoconfig.worldtools.option.world.worldGenerator.type.@Tooltip": "Für Schlussfolgerungen: VOID: Wird eine leere Welt erzeugen. FLAT: Erzeugt eine flache Welt. DEFAULT: Erzeugt eine normale Welt.",
+  "text.autoconfig.worldtools.title": "WeltWerkzeug Einstellungen",
   "worldtools.capture.and": " und ",
-  "worldtools.capture.chunk": "%s Chunk",
-  "worldtools.capture.chunks": "%s Chunks",
-  "worldtools.capture.click_to_open": "%s (Klicke zum Öffnen)",
-  "worldtools.capture.container": "%s Kontainer",
-  "worldtools.capture.containers": "%s Kontainer",
+  "worldtools.capture.chunk": "%s chunk",
+  "worldtools.capture.chunks": "%s chunks",
+  "worldtools.capture.click_to_open": "%s (Klicken zum Öffnen)",
+  "worldtools.capture.container": "%s Behälter",
+  "worldtools.capture.containers": "%s Behälter",
   "worldtools.capture.entities": "%s Entitäten",
   "worldtools.capture.entity": "%s Entität",
   "worldtools.capture.in_dimension": " in Dimension ",
-  "worldtools.capture.nothing_saved_yet": "Noch nichts für %s gespeichert",
+  "worldtools.capture.nothing_saved_yet": "Noch nichts gespeichert für %s",
   "worldtools.capture.player": "%s Spieler",
   "worldtools.capture.players": "%s Spieler",
-  "worldtools.capture.saved": "Speicherte ",
-  "worldtools.capture.saved.advancements": "Erfolge des Spielers %s gespeichert",
-  "worldtools.capture.saved.chunks": "Chunk bei %s in Dimension %s gespeichert",
-  "worldtools.capture.saved.chunks.anonymized": "Chunk in Dimension %s gespeichert",
-  "worldtools.capture.saved.compressed": "Komprimierte Aufnahme als %s gespeichert",
-  "worldtools.capture.saved.end_flow": "Aufnahme von %s beendet",
-  "worldtools.capture.saved.entities": "Entitäten %s in Chunk %s in Dimension %s gespeichert",
-  "worldtools.capture.saved.entities.anonymized": "Entitäten %s in Dimension %s gespeichert",
-  "worldtools.capture.saved.levelData": "%s für %s gespeichert.",
-  "worldtools.capture.saved.metadata": "Metadaten von %s gespeichert",
-  "worldtools.capture.saved.player": "Spieler %s bei %s in Dimension %s gespeichert",
-  "worldtools.capture.saved.player.anonymized": "Spieler %s in Dimension %s gespeichert",
-  "worldtools.capture.saved.statistics": "Statistiken von %s gespeichert.",
-  "worldtools.capture.saved.mapData": "Karte %s in Dimension %s gespeichert",
-  "worldtools.capture.to_directory": " in das Verzeichnis ",
-  "worldtools.capture.took": " (in %s)",
-  "worldtools.gui.browser.title": "WorldTools Browser",
-  "worldtools.gui.capture.existing_world_confirm.message": "Die Welt \"%s\" existiert bereits. Soll sie überschrieben werden?",
-  "worldtools.gui.capture.existing_world_confirm.title": "Welt existiert bereits",
-  "worldtools.gui.escape.button.finish_download": "Aufzeichnung von %s speichern",
+  "worldtools.capture.saved": "Gespeichert ",
+  "worldtools.capture.saved.advancements": "Fortschritt gespeichert für %s",
+  "worldtools.capture.saved.chunks": "Gespeicherter Chunk bei %s in Dimension %s",
+  "worldtools.capture.saved.chunks.anonymized": "Gespeicherter Chunk in Dimension %s",
+  "worldtools.capture.saved.compressed": "ZIP Archiv der Aufnahme als %s gespeichert",
+  "worldtools.capture.saved.end_flow": "Aufnahme von %s gespeichert",
+  "worldtools.capture.saved.entities": "Gespeicherte %s in Chunk %s in Dimension %s",
+  "worldtools.capture.saved.entities.anonymized": "Gespeicherte %s in Dimension %s",
+  "worldtools.capture.saved.levelData": "Gespeicherte %s von %s",
+  "worldtools.capture.saved.mapData": "Gespeicherte Karten in der Dimension %s",
+  "worldtools.capture.saved.metadata": "Gespeicherte Metadaten von %s",
+  "worldtools.capture.saved.player": "Gespeicherter Spieler %s bei %s in Dimension %s",
+  "worldtools.capture.saved.player.anonymized": "Gespeicherter Spieler %s in Dimension %s",
+  "worldtools.capture.saved.statistics": "Statistiken gespeichert von %s",
+  "worldtools.capture.to_directory": " zum Speicherverzeichnis ",
+  "worldtools.capture.took": " (brauchte %s)",
+  "worldtools.gui.browser.title": "WeltWerkzeug Browser",
+  "worldtools.gui.capture.existing_world_confirm.message": "Eine Aufnahme namens: \"%s\" existiert bereits. Überschreiben Sie sie? (Wird mit vorhandenen Daten zusammengeführt)",
+  "worldtools.gui.capture.existing_world_confirm.title": "Bestehende Welt gefunden",
+  "worldtools.gui.escape.button.finish_download": "Erfassung von %s speichern",
   "worldtools.gui.manager.button.cancel": "Abbrechen",
-  "worldtools.gui.manager.button.config": "Konfiguration",
-  "worldtools.gui.manager.button.start_download": "Herunterladen",
-  "worldtools.gui.manager.button.stop_download": "Download stoppen",
-  "worldtools.gui.manager.title": "WorldTools Verwaltung",
-  "worldtools.gui.manager.world_name_placeholder": "Weltname eingeben... (Default: %s)",
-  "worldtools.key.categories": "WeltWerkzeuge",
+  "worldtools.gui.manager.button.config": "Einstellungen",
+  "worldtools.gui.manager.button.start_download": "Aufnahme starten",
+  "worldtools.gui.manager.button.stop_download": "Aufnahme stoppen",
+  "worldtools.gui.manager.title": "WeltWerkzeug Manager",
+  "worldtools.gui.manager.world_name_placeholder": "Weltnamen eingeben... (Standard: %s)",
+  "worldtools.key.categories": "WeltWerkzeug",
   "worldtools.key.open_config": "Konfiguration öffnen",
-  "worldtools.key.toggle_capture": "Aufnahme starten/stoppen",
-  "worldtools.log.error.already_capturing": "Es läuft bereits eine Aufnahme!",
-  "worldtools.log.error.failed_to_create_session": "Fehler beim Erstellen der Sitzung für \"%s\"! (Error: %s)",
-  "worldtools.log.error.failed_to_save_level": "Fehler beim Speichern von Level.dat für \"%s\"! (Error: %s)",
-  "worldtools.log.error.failed_to_visit_file": "Fehler beim Anfragen der Datei \"%s\" um sie zu Komprimieren! (Error: %s)",
-  "worldtools.log.error.failed_to_zip": "Fehler beim Erstellen einer Sitzung zum Komprimieren von \"%s\"! (Error: %s)",
+  "worldtools.key.toggle_capture": "Schnell Aufnahme",
+  "worldtools.log.error.already_capturing": "Eine Aufnahme für %s läuft bereits!",
+  "worldtools.log.error.failed_to_create_session": "Sitzung für \"%s\" konnte nicht erstellt werden! (Fehler: %s)",
+  "worldtools.log.error.failed_to_save_level": "Die Datei level.dat für \"%s\" konnte nicht gespeichert werden! (Fehler: %s)",
+  "worldtools.log.error.failed_to_visit_file": "Der Zugriff auf die Datei %s zum Erstellen einer Zip-Datei ist fehlgeschlagen!",
+  "worldtools.log.error.failed_to_zip": "Sitzung zur ZIP Aufnahme von %s konnte nicht erstellt werden!",
   "worldtools.log.error.not_capturing": "Es läuft noch keine Aufnahme!",
-  "worldtools.log.error.world_name_too_long": "Weltname \"%s\" darf nicht länger als %d Zeichen sein!",
+  "worldtools.log.error.world_name_too_long": "Weltname \"%s\" ist zu lang!(max. %d Zeichen)",
+  "worldtools.log.info.singleplayer_capture": "EXPERIMENTELL: Die Aufnahme im Einzelspielermodus ist experimentell und funktioniert möglicherweise nicht wie erwartet!",
   "worldtools.log.info.started_capture": "Aufnahme von %s gestartet...",
-  "worldtools.log.info.stopping_capture": "Aufnahme von %s wird gestoppt...",
-  "worldtools.log.info.singleplayer_capture": "EXPERIMENTELL: Die Aufnahme von Einzelspieler Welten ist noch nicht vollständig getestet und kann zu Fehlern führen!"
+  "worldtools.log.info.stopping_capture": "Aufnahme von %s gestoppt..."
 }
